--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ ul {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+    color: var(--darkBlueText);
+}
+
 .container {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -287,6 +292,7 @@ main {
     border-radius: .5rem;
     max-width: 10rem;
     box-shadow: 0 -.2rem 1.5rem rgba(0 0 0 / 10%);
+    cursor: pointer;
 }
 
 .country__details .container .btn__container button {
@@ -294,7 +300,6 @@ main {
     outline: none;
     background-color: var(--white);
     color: var(--darkBlueText);
-    cursor: pointer;
 }
 
 .country__details .container .row {
@@ -307,45 +312,45 @@ main {
     width: 100%;
 }
 
-.country__details .container .row .country-details h4 {
+.country__details .container .row .country__details h4 {
     text-transform: capitalize;
     font-size: 2rem;
 }
 
-.country__details .container .row .country-details .details {
+.country__details .container .row .country__details .details {
     margin-top: 2rem;
 }
 
-.country__details .container .row .country-details .details ul {}
-
-.country__details .container .row .country-details .details ul li {
+.country__details .container .row .country__details .details ul li {
     padding: .5rem 0;
 }
 
-.country__details .container .row .country-details .details ul li strong {
+.country__details .container .row .country__details .details ul li strong {
     text-transform: capitalize;
 }
 
-.country__details .container .row .country-details .details ul li span {
+.country__details .container .row .country__details .details ul li span {
     font-weight: 600;
 }
 
-.country__details .row .country-details .details .border__countries {
+.country__details .row .country__details .details .border__countries {
     margin-top: 2rem;
 }
 
-.country__details .row .country-details .details .border__countries h5 {
+.country__details .row .country__details .details .border__countries h5 {
     font-size: 1.6rem;
     text-transform: capitalize;
     margin-bottom: 1rem;
 }
 
-.country__details .row .country-details .details .border__countries .border__content {
+.country__details .row .country__details .details .border__countries .border__content {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
-.country__details .row .country-details .details .border__countries .border__content span {
+.country__details .row .country__details .details .border__countries .border__content span {
     padding: .5rem 3rem;
     font-weight: 600;
     border-radius: .5rem;
@@ -375,7 +380,7 @@ main {
     }
 
     .country__details .container .row .image__container,
-    .country__details .container .row .country-details {
+    .country__details .container .row .country__details {
         flex: 0 0 50%;
     }
 }
@@ -385,26 +390,26 @@ main {
         gap: 0;
     }
 
-    .country__details .row .country-details .details .list__content {
+    .country__details .row .country__details .details .list__content {
         display: flex;
         justify-content: space-between;
     }
 
-    .country__details .row .country-details .details .border__countries {
+    .country__details .row .country__details .details .border__countries {
         display: flex;
         align-items: center;
         gap: 1rem;
     }
 
-    .country__details .row .country-details .details .border__countries h5 {
+    .country__details .row .country__details .details .border__countries h5 {
         margin: 0;
     }
 
-    .country__details .row .country-details .details .border__countries .border__content {
+    .country__details .row .country__details .details .border__countries .border__content {
         gap: 1rem;
     }
 
-    .country__details .row .country-details .details .border__countries {
+    .country__details .row .country__details .details .border__countries {
         margin-top: 8rem;
     }
 
@@ -412,7 +417,7 @@ main {
         padding-right: 5rem;
     }
 
-    .country__details .container .row .country-details {
+    .country__details .container .row .country__details {
         padding-left: 5rem;
     }
 }
